--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -26,6 +30,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss-load-config": "^2.1.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-axios": "0.0.4",
